--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,12 @@
   --foreground: #171717;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -15,7 +21,9 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  width: 100vw;
+  /* height: 100vh; */
+  color: black;
+  background-color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
