--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,9 +21,33 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   /* height: 100vh; */
   color: black;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
+  /* overflow-x: hidden; */
+ 
+  padding: 0 48px;
+
 }
+/* Hide scrollbars but allow scrolling */
+.no-scrollbar {
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
+
+html, body {
+  overflow-y: scroll; /* Enable scrolling */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
+  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* Hide scrollbar in Chrome, Safari, and Edge */
+}
+
