--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,23 +31,16 @@ body {
   padding: 0 48px;
 
 }
-/* Hide scrollbars but allow scrolling */
-.no-scrollbar {
-  scrollbar-width: none;  /* Firefox */
-  -ms-overflow-style: none;  /* IE and Edge */
-}
 
-.no-scrollbar::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
-}
 
-html, body {
-  overflow-y: scroll; /* Enable scrolling */
-  scrollbar-width: none; /* Hide scrollbar in Firefox */
-  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+
+/* html, body {
+  overflow-y: scroll; 
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
 }
 
 html::-webkit-scrollbar {
-  display: none; /* Hide scrollbar in Chrome, Safari, and Edge */
-}
+  display: none; 
+} */
 
