--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,11 +6,16 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
 
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: content-box; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,7 +28,8 @@
 body {
   width: 100%;
   /* height: 100vh; */
-  color: black;
+  color: #2E2B2B;
+;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   /* overflow-x: hidden; */
@@ -34,15 +40,15 @@ body {
 
 
 
-/* html, body {
-  overflow-y: scroll; 
+html, body {
+  /* overflow-y: scroll;  */
   scrollbar-width: none; 
   -ms-overflow-style: none; 
 }
 
 html::-webkit-scrollbar {
   display: none; 
-} */
+}
 
 /* Chrome, Safari, Edge, Opera */
 input[type='number']::-webkit-outer-spin-button,
