--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,45 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Defualt template */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box ;
 }
+/* ..... */
+
+/* Font smoothing across browers */
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
+/* ..... */
 
-*{
-  margin: 0;
-  padding: 0;
-  /* box-sizing: content-box; */
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   width: 100%;
-  /* height: 100vh; */
+  min-height: 100vh;
   color: #2E2B2B;
-;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
-  /* overflow-x: hidden; */
- 
-  padding: 0 48px;
 
+  padding: 0 48px;
 }
 
 
-
-html, body {
+/* To Hide Scrollbar */
+html {
   /* overflow-y: scroll;  */
   scrollbar-width: none; 
   -ms-overflow-style: none; 
@@ -49,15 +41,20 @@ html, body {
 html::-webkit-scrollbar {
   display: none; 
 }
+/* ..... */
 
-/* Chrome, Safari, Edge, Opera */
+
+/* To hide Number Deafault Slider */
 input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
+  /* Chrome, Safari, Edge, Opera */
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* Firefox */
 input[type='number'] {
+  /* Firefox */
+  appearance: textfield;
   -moz-appearance: textfield;
 }
+/* ...... */
